--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,132 @@
 <!DOCTYPE html>
 <html lang="id">
-<!-- ... (isi final admin.html lengkap dengan update popup, search, hapus, dll) ... -->
+<head>
+  <meta charset="utf-8">
+  <title>Portal Berita — Admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    :root{--bg:#f7f7fb;--card:#ffffff;--text:#222;--muted:#666;--accent:#f7b500;--accent2:#ffd84d;}
+    *{box-sizing:border-box;}
+    body{margin:0;background:var(--bg);color:var(--text);font-family:'Poppins',sans-serif;}
+    header{position:sticky;top:0;background:rgba(255,255,255,.8);backdrop-filter:blur(12px);padding:1rem 1.2rem;border-bottom:1px solid #eee;}
+    h1{margin:0;font-size:1.1rem;}
+    main{max-width:980px;margin:1rem auto;padding:0 1rem;}
+    .card{background:var(--card);border-radius:16px;box-shadow:0 4px 14px rgba(0,0,0,.06);padding:1rem;margin-bottom:1rem;}
+    label{display:block;margin:.25rem 0 .2rem;font-weight:500;}
+    input,select,textarea{width:100%;padding:.6rem .75rem;border:1px solid #ddd;border-radius:16px;font-family:inherit;outline:none;}
+    textarea{min-height:120px;resize:vertical;}
+    .row{display:grid;grid-template-columns:1fr 1fr;gap:1rem;}
+    .btn{display:inline-block;background:linear-gradient(135deg,var(--accent2),var(--accent));color:#000;border:none;padding:.6rem 1.1rem;border-radius:20px;font-weight:600;cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,.15);transition:transform .2s;}
+    .btn:hover{transform:scale(1.03);}
+    .btn.secondary{background:#efefef;}
+    .right{display:flex;gap:.5rem;justify-content:flex-end;flex-wrap:wrap;}
+    table{width:100%;border-collapse:collapse;font-size:.9rem;}
+    th,td{padding:.6rem;border-bottom:1px solid #eee;vertical-align:top;}
+    th{font-weight:600;text-align:left;color:#444;}
+    .muted{color:var(--muted);font-size:.85rem;}
+    .tag{display:inline-block;padding:.2rem .5rem;background:#f2f2f2;border-radius:999px;font-size:.8rem;}
+    .danger{color:#b00020;cursor:pointer;}
+    .hidden{display:none;}
+    .mt{margin-top:.6rem;}
+    #formMsg a{color:var(--accent);font-weight:500;text-decoration:none;}
+    #loginCard{max-width:400px;margin:15vh auto;text-align:center;padding:2rem;}
+    #loginCard input{text-align:center;font-size:1rem;}
+    #loginBtn{margin-top:1rem;width:100%;}
+    @media(max-width:600px){.row{grid-template-columns:1fr;}#loginCard{margin:20vh 1rem;}header h1{font-size:1rem;}table{font-size:.8rem;} .right{justify-content:center;}}
+    #loadingOverlay{position:fixed;inset:0;background:rgba(255,255,255,0.7);display:none;justify-content:center;align-items:center;z-index:3000;}
+    .spinner{width:50px;height:50px;border:4px solid #ddd;border-top:4px solid var(--accent);border-radius:50%;animation:spin 1s linear infinite;}
+    @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+    .popup{position:fixed;inset:0;background:rgba(0,0,0,0.5);display:flex;justify-content:center;align-items:center;z-index:4000;}
+    .popup.hidden{display:none;}
+    .popup-box{background:#fff;padding:1rem 1.5rem;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.2);max-width:320px;text-align:center;}
+    .popup-actions{margin-top:1rem;display:flex;gap:.5rem;justify-content:center;}
+    .popup-actions button{padding:.5rem 1rem;border:none;border-radius:8px;cursor:pointer;background:#f7b500;}
+  </style>
+</head>
+<body>
+  <header><h1>Portal Berita — Admin</h1></header>
+  <main>
+    <!-- LOGIN -->
+    <div id="loginCard" class="card">
+      <h3>Login Admin</h3>
+      <input type="email" id="loginEmail" placeholder="Email">
+      <input type="password" id="loginPassword" placeholder="Password">
+      <button id="loginBtn" class="btn">Masuk</button>
+      <div id="loginMsg" class="muted mt"></div>
+    </div>
+
+    <!-- FORM -->
+    <div id="formCard" class="card hidden">
+      <h3 id="formTitle">Tambah Konten</h3>
+      <div class="row"><div><label>Judul</label><input type="text" id="fJudul"></div><div><label>Kategori</label><select id="fKategori"><option>Berita</option><option>Pengumuman</option><option>Peraturan</option></select></div></div>
+      <label>Isi Konten</label><textarea id="fIsi"></textarea>
+      <div class="row"><div><label>Upload Gambar</label><input type="file" id="fFile" accept="image/*"></div><div><label>GambarURL</label><input type="text" id="fGambarURL"></div></div>
+      <div class="row"><div><label>Status</label><select id="fStatus"><option>Aktif</option><option>Arsip</option></select></div><div><label>Slug</label><input type="text" id="fSlug"></div></div>
+      <div class="right mt"><button class="btn secondary" id="resetBtn">Bersihkan</button><button class="btn" id="saveBtn">Simpan</button><button class="btn secondary" id="logoutBtn">Logout</button></div>
+      <div id="formMsg" class="muted mt"></div>
+    </div>
+
+    <!-- LIST -->
+    <div id="listCard" class="card hidden">
+      <div class="flex" style="display:flex;justify-content:space-between;align-items:center;">
+        <h3>Daftar Konten</h3>
+        <select id="filterKategori"><option value="">Semua</option><option>Berita</option><option>Pengumuman</option><option>Peraturan</option></select>
+      </div>
+      <input type="text" id="searchAdmin" placeholder="Cari judul/isi..." style="margin:.5rem 0;padding:.5rem;border-radius:12px;border:1px solid #ccc;width:100%;">
+      <table><thead><tr><th>Judul</th><th>Kategori</th><th>Tanggal</th><th>Status</th><th>Gambar</th></tr></thead><tbody id="tbody"></tbody></table>
+    </div>
+  </main>
+
+  <!-- LOADING -->
+  <div id="loadingOverlay"><div class="spinner"></div></div>
+
+  <!-- Custom Popup -->
+  <div id="customPopup" class="popup hidden"><div class="popup-box"><p id="popupMessage"></p><div class="popup-actions" id="popupActions"></div></div></div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
+    import { getFirestore, collection, addDoc, updateDoc, deleteDoc, doc, getDocs, getDoc, query, where, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey:"AIzaSyDEGklPNtv-LvKzSW0d3QZRo5DMLr1nY-Y",
+      authDomain:"portal-berita-firebase.firebaseapp.com",
+      projectId:"portal-berita-firebase",
+      storageBucket:"portal-berita-firebase.firebasestorage.app",
+      messagingSenderId:"598254123187",
+      appId:"1:598254123187:web:9418bcbe0a00dda3c3d8c6"
+    };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const CLOUD_NAME="dfojor5pr";
+    const UPLOAD_PRESET="portal-firebase";
+
+    const loginCard=document.getElementById("loginCard"),formCard=document.getElementById("formCard"),listCard=document.getElementById("listCard"),tbody=document.getElementById("tbody");
+    let EDIT_ID=null;
+
+    function showLoading(on=true){document.getElementById("loadingOverlay").style.display=on?"flex":"none";}
+    function showPopup(msg,actions=['OK']){const p=document.getElementById("customPopup");document.getElementById("popupMessage").textContent=msg;document.getElementById("popupActions").innerHTML=actions.map(a=>`<button onclick="document.getElementById('customPopup').classList.add('hidden');if('${a}'==='Ya'&&window._confirmCb)window._confirmCb();">${a}</button>`).join('');p.classList.remove("hidden");}
+
+    onAuthStateChanged(auth,(user)=>{if(user){loginCard.classList.add("hidden");formCard.classList.remove("hidden");listCard.classList.remove("hidden");reloadList();}else{loginCard.classList.remove("hidden");formCard.classList.add("hidden");listCard.classList.add("hidden");}});
+
+    document.getElementById("loginBtn").onclick=async()=>{try{await signInWithEmailAndPassword(auth,document.getElementById("loginEmail").value,document.getElementById("loginPassword").value);}catch(err){document.getElementById("loginMsg").textContent="Login gagal";}};
+    document.getElementById("logoutBtn").onclick=()=>signOut(auth);
+    document.getElementById("resetBtn").onclick=()=>resetForm();
+    document.getElementById("saveBtn").onclick=()=>submitForm();
+    document.getElementById("filterKategori").onchange=()=>reloadList();
+    document.getElementById("searchAdmin").oninput=()=>reloadList();
+
+    async function reloadList(){try{showLoading(true);let q=collection(db,"posts");const cat=document.getElementById("filterKategori").value;if(cat) q=query(collection(db,"posts"),where("category","==",cat));const snap=await getDocs(q);showLoading(false);tbody.innerHTML="";const keyword=document.getElementById("searchAdmin").value.toLowerCase();snap.forEach(docSnap=>{const d=docSnap.data();if(!(d.title.toLowerCase().includes(keyword)||d.content.toLowerCase().includes(keyword)))return;const tr=document.createElement("tr");tr.innerHTML=`<td><strong>${d.title}</strong><div class="muted">${d.slug||""}</div><div class="mt"><a href="#" onclick="editRow('${docSnap.id}');return false;">Edit</a> | <a href="#" onclick="arsipkan('${docSnap.id}');return false;">Arsipkan</a> | <a href="#" onclick="hapus('${docSnap.id}');return false;" class="danger">Hapus</a></div></td><td>${d.category}</td><td>${d.createdAt?d.createdAt.toDate().toLocaleDateString("id-ID"):""}</td><td><span class="tag">${d.status}</span></td><td>${d.imageUrl?`<a href="${d.imageUrl}" target="_blank">Lihat</a>`:"-"}</td>`;tbody.appendChild(tr);});}catch(err){showPopup("Gagal memuat data");}}
+
+    window.editRow=async(id)=>{showLoading(true);const snap=await getDoc(doc(db,"posts",id));showLoading(false);if(!snap.exists())return;const d=snap.data();EDIT_ID=id;document.getElementById("formTitle").textContent="Edit Konten";document.getElementById("fJudul").value=d.title||"";document.getElementById("fKategori").value=d.category||"Berita";document.getElementById("fIsi").value=d.content||"";document.getElementById("fGambarURL").value=d.imageUrl||"";document.getElementById("fStatus").value=d.status||"Aktif";document.getElementById("fSlug").value=d.slug||"";window.scrollTo({top:0,behavior:"smooth"});};
+    window.arsipkan=async(id)=>{window._confirmCb=async()=>{await updateDoc(doc(db,"posts",id),{status:"Arsip"});reloadList();};showPopup("Arsipkan item ini?",["Ya","Batal"]);};
+    window.hapus=async(id)=>{window._confirmCb=async()=>{await deleteDoc(doc(db,"posts",id));reloadList();};showPopup("Hapus item ini?",["Ya","Batal"]);};
+
+    function resetForm(){EDIT_ID=null;document.getElementById("formTitle").textContent="Tambah Konten";["fJudul","fIsi","fGambarURL","fSlug"].forEach(id=>document.getElementById(id).value="");document.getElementById("fKategori").value="Berita";document.getElementById("fStatus").value="Aktif";document.getElementById("fFile").value="";document.getElementById("formMsg").textContent="";}
+    async function submitForm(){const title=document.getElementById("fJudul").value.trim();const category=document.getElementById("fKategori").value;const content=document.getElementById("fIsi").value.trim();const status=document.getElementById("fStatus").value;const slug=document.getElementById("fSlug").value.trim();let imageUrl=document.getElementById("fGambarURL").value.trim();const file=document.getElementById("fFile").files[0];if(file){const formData=new FormData();formData.append("file",file);formData.append("upload_preset",UPLOAD_PRESET);showLoading(true);const res=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{method:"POST",body:formData});const data=await res.json();showLoading(false);if(data.secure_url){imageUrl=data.secure_url;document.getElementById("fGambarURL").value=imageUrl;}}const payload={title,category,content,status,slug,imageUrl,createdAt:serverTimestamp(),author:auth.currentUser.email};try{if(EDIT_ID){await updateDoc(doc(db,"posts",EDIT_ID),payload);}else{await addDoc(collection(db,"posts"),payload);}document.getElementById("formMsg").textContent="Tersimpan ✓";resetForm();reloadList();}catch(err){document.getElementById("formMsg").textContent="Gagal menyimpan";}}
+  </script>
+</body>
 </html>
