--- a/detail.html
+++ b/detail.html
@@ -14,20 +14,26 @@
     .detail-img{max-width:700px;max-height:400px;object-fit:cover;width:100%;border-radius:12px;margin-bottom:1rem;}
     h2{margin-top:.5rem;}
     .date{color:#666;font-size:.9rem;margin-bottom:.6rem;}
-    /* popup */
-    .popup{position:fixed;inset:0;background:rgba(0,0,0,0.5);display:flex;justify-content:center;align-items:center;z-index:4000;}
-    .popup.hidden{display:none;}
-    .popup-box{background:#fff;padding:1rem 1.5rem;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.2);max-width:320px;text-align:center;}
-    .popup-actions{margin-top:1rem;display:flex;gap:.5rem;justify-content:center;}
-    .popup-actions button{padding:.5rem 1rem;border:none;border-radius:8px;cursor:pointer;background:#f7b500;}
+    /* === popup custom === */
+    .fb01-overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;justify-content:center;align-items:center;z-index:9999}
+    .fb01-overlay.active{display:flex}
+    .fb01-box{background:#fff;max-width:340px;width:90%;border-radius:14px;box-shadow:0 8px 28px rgba(0,0,0,.15);padding:16px 18px;font-family:inherit;color:inherit}
+    .fb01-box p{margin:0;font-size:14px;line-height:1.5}
+    .fb01-actions{display:flex;gap:8px;justify-content:center;margin-top:14px}
+    .fb01-btn{border:none;border-radius:10px;padding:8px 14px;cursor:pointer;font-weight:600}
+    .fb01-ok{background:#f7b500;color:#000}
   </style>
 </head>
 <body>
   <header><a href="index.html">⬅ Kembali</a></header>
   <main><div id="detailContainer"></div></main>
 
-  <div id="customPopup" class="popup hidden">
-    <div class="popup-box"><p id="popupMessage"></p><div class="popup-actions" id="popupActions"></div></div>
+  <!-- popup -->
+  <div id="fb01Popup" class="fb01-overlay" aria-hidden="true">
+    <div class="fb01-box">
+      <p id="fb01Msg"></p>
+      <div class="fb01-actions" id="fb01Actions"></div>
+    </div>
   </div>
 
   <script type="module">
@@ -45,19 +51,19 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    function showPopup(msg){
-      const p=document.getElementById("customPopup");
-      document.getElementById("popupMessage").textContent=msg;
-      document.getElementById("popupActions").innerHTML='<button onclick="document.getElementById(`customPopup`).classList.add(`hidden`)">OK</button>';
-      p.classList.remove("hidden");
+    function fb01Alert(msg){
+      const overlay=document.getElementById('fb01Popup');
+      document.getElementById('fb01Msg').textContent=msg;
+      document.getElementById('fb01Actions').innerHTML='<button class="fb01-btn fb01-ok" onclick="document.getElementById(`fb01Popup`).classList.remove(`active`)">OK</button>';
+      overlay.classList.add('active');
     }
 
     async function loadDetail(){
       const id=new URLSearchParams(window.location.search).get("id");
-      if(!id){showPopup("Gagal memuat detail");return;}
+      if(!id){fb01Alert("Gagal memuat detail");return;}
       try{
         const snap=await getDoc(doc(db,"posts",id));
-        if(!snap.exists()){showPopup("Gagal memuat detail");return;}
+        if(!snap.exists()){fb01Alert("Gagal memuat detail");return;}
         const d=snap.data();
         document.getElementById("detailContainer").innerHTML=`
           <div class="card">
@@ -66,7 +72,7 @@
             <div class="date">${d.createdAt?.toDate().toLocaleDateString("id-ID")||""}</div>
             <p>${d.content.replace(/\\n/g,"<br>")}</p>
           </div>`;
-      }catch(err){showPopup("Gagal memuat detail");}
+      }catch(err){fb01Alert("Gagal memuat detail");}
     }
     loadDetail();
   </script>
